--- a/.terraform-docs.yml
+++ b/.terraform-docs.yml
@@ -41,10 +41,12 @@ content: |-
 
   {{ indent 0 "#" }} Usage
 
-  It's very easy to use!
+  This module provisions a windows virtual machine. Refer to the examples on how this could be done. It is a fast and easy to use deployment of a virtual machine!
   ```hcl
   {{ include "examples/basic/main.tf" }}
   ```
+  ```hcl
+  {{ include "examples/advanced/main.tf" }}
   
   {{ .Requirements }}
   {{ .Providers }}
